Working copy with additional unit/acceptance tests